eks/blue-green-upgrade/assets/sample-app/green/fastapi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    app.kubernetes.io/name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api-app
  namespace: app
  labels:
    app.kubernetes.io/name: fast-api-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: fast-api-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fast-api-app
    spec:
      serviceAccountName: app-sa
      containers:
        - name: fastapi
          image: 176032258835.dkr.ecr.ap-northeast-1.amazonaws.com/blue-green-ecr:v1.0.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fast-api-app
  namespace: app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fast-api-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-api-app
  namespace: app
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "example.jnytnai.click"
    external-dns.alpha.kubernetes.io/aws-weight: "70"
    external-dns.alpha.kubernetes.io/set-identifier: "test-green"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: "example.jnytnai.click"
      http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: fast-api-app
              port:
                number: 80
